@@ -400,6 +400,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	ADD: Added new glyphs to the ALTTP font (#228).
 	ADD: Added colour variations to the ALTTP font (#228).
 	ADD: Added a version conversion in order to keep savegames up to date (#170).
+	ADD: Added the Pixolde font from Ocean's Heart.
 	CHG: Redone Spectral Ganon's sprite (#29).
 	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
 	CHG: Moved the green house in the east of the castle.
@@ -453,6 +454,9 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Standardised ocarina songs.
 	CHG: Changed ocarina notes sprites.
 	CHG: Hid the mouse cursor.
+	CHG: Changed max magic values to 39, 79 and 119 (#229).
+	CHG: Changed magic bar values in the HUD according to the max magic values.
+	CHG: Changed magic bar and hearts colours in the HUD.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
